Fixed wrong font on the modal header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
   padding: 0px;
 }
 
-.app-modal .header *,
+.app-modal .header,
 .app-screen-saver .app-video-overlay * {
   font-family: "Montserrat", Helvetica, Arial, sans-serif;
 }
